@@ -216,3 +216,6 @@ Revision	Version Updated		Log Message
 199		C++			Always give democracies some form of voting rights.
 200		C++			Grow soldier pops to support the regiments assigned to them
 201		C++			Give pooled regiments to the armies/navies that were most shortchanged
+202		C++			If a regiment's home province doesn't belong to the regiment owner, don't try to use its pops.
+					If a regiment's home was originally a colony that can't support it, make it into an expeditionary unit.
+					Detect and handle several additional errors in army placement.
